[package]
name = "wee-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.21", optional = true}
rustls = {version = "0.23.2", optional = true}
rustls-pemfile = {version = "2.1.1", optional = true}

[features]
tls = ["rustls", "rustls-pemfile"]
log = ["dep:log"]
